[gd_scene load_steps=13 format=2]

[ext_resource path="res://actors/items/goonie/goonie_flap4.png" type="Texture" id=1]
[ext_resource path="res://actors/items/goonie/goonie_flap1.png" type="Texture" id=2]
[ext_resource path="res://actors/items/goonie/goonie_flap0.png" type="Texture" id=3]
[ext_resource path="res://actors/items/goonie/goonie_flap3.png" type="Texture" id=4]
[ext_resource path="res://actors/items/goonie/goonie_flap6.png" type="Texture" id=5]
[ext_resource path="res://actors/items/goonie/goonie_swoop.png" type="Texture" id=6]
[ext_resource path="res://actors/items/goonie/goonie_flap2.png" type="Texture" id=7]
[ext_resource path="res://actors/items/goonie/goonie_flap5.png" type="Texture" id=8]
[ext_resource path="res://actors/items/goonie/goonie.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 7 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "swoop",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 8 ), ExtResource( 5 ) ],
"loop": true,
"name": "flap",
"speed": 10.0
} ]

[node name="Goonie" type="StaticBody2D"]
z_index = 1
collision_mask = 0
script = ExtResource( 9 )

[node name="RideArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RideArea"]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
one_way_collision = true

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -2 )
frames = SubResource( 3 )
animation = "flap"
frame = 3
playing = true

[connection signal="body_entered" from="RideArea" to="." method="_on_RideArea_body_entered"]
[connection signal="body_exited" from="RideArea" to="." method="_on_RideArea_body_exited"]
